# dioxus-gestures

./: Cargo.toml  LICENSE  README.md
demo/: Cargo.toml  README.md
demo-fullstack/: Cargo.toml  README.md
demo/mobile/: Cargo.toml
demo/mobile/src/: main.rs
demo/ui/: Cargo.toml  README.md
demo/web/: Dioxus.toml  README.md
demo/web/src/: main.rs
src/: lib.rs  state.rs  use_gestures.rs
src/state/: events.rs  external_handlers.rs  gestures.rs  options.rs  state.rs
src/state/gestures/: down_pointer.rs  drag.rs  hover.rs  pinch.rs  pointer.rs
