[package]
name = "dioxus-gestures"
description = "Drag, Pinch, and Hover gestures for dioxus components."
version = "0.2.2"
edition = "2021"
repository = "https://github.com/wakefullynx/dioxus-gestures"
license = "MIT"

[dependencies]
dioxus = { version = "0.7.2" }
paste = "1.0.15"
nanoid = "0.4.0"
getrandom = { version = "0.2.16", features = ["js"] }

[features]
fullstack = ["dioxus/fullstack"]
