[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
]

[workspace.dependencies]
dioxus = { version = "0.6.3" }

# workspace
ui = { path = "ui" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

